kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: myksa
      containers:
        - name: imagechat-backend
          image: gcr.io/imagechat-285706/imagechat-backend:533125be28de6eb7b42403da52a6b6767ffecc75
          resources:
            limits:
              memory: "1000Mi"
              cpu: "300m"
            requests:
              memory: "250Mi"
              cpu: "10m"
          ports:
            - containerPort: 8888
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8888
        - name: cloud-sql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.17
          command:
            - "/cloud_sql_proxy"
            - "-ip_address_types=PRIVATE"
            - "-instances=$(CONNECTION_NAME)=tcp:3306"
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
            requests:
              memory: "128Mi"
              cpu: "10m"
          securityContext:
            runAsNonRoot: true
