kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: imagechat-frontend
        image: gcr.io/imagechat-285509/imagechat-frontend:295b8b9d53bcef1df3acf4ff693d193a4861947e
        resources:
          limits:
            memory: "1000Mi"
            cpu: "300m"
          requests:
            memory: "100Mi"
            cpu: "50m"
        ports:
        - containerPort: 80
