kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 3001
      protocol: TCP
      targetPort: 80
